# pyscaler

./: .gitignore  README.en.md  README.md  pyproject.toml
docs/: DESIGN.md  SUPPORTED_PATTERNS.md  TEST_REPORT.md  USER_GUIDE.md
examples/: 01_file_loop.py  02_dataframe_map.py  03_blocked_by_state.py  04_zip_loop.py  05_list_comp.py  06_map_call.py  07_demo_compute_stats.py  README.md  example_loop.py
src/distify/: analyzer.py  cli.py
src/distify/backends/: base.py
src/distify/frameworks/: aura.py  dask.py  ray.py  registry.py
src/pyscaler/: analyzer.py  cli.py
src/pyscaler/backends/: __init__.py  dbay.py  local.py  registry.py
src/pyscaler/frameworks/: ray.py  registry.py
src/xscale/: cli.py
src/xscale/frameworks/: __init__.py  base.py  ray.py
tests/: test_cli_smoke.py  test_e2e_dataframe.py  test_e2e_dbay.py  test_e2e_more_patterns.py  test_e2e_ray.py  test_e2e_ray_cluster.py  test_examples_parse.py
