[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyscaler"
version = "0.0.4"
description = "Turn single-machine Python data code into a distributed script — framework-agnostic, run anywhere."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "pyscaler contributors" }]
keywords = ["distributed", "ray", "aura", "parallel", "code-transform"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
]

[project.optional-dependencies]
ray = ["ray[default]>=2.9", "pandas>=2.0", "pyarrow>=14"]
aura = []  # aura-sdk TBD
dbay = ["httpx>=0.27"]
llm = ["anthropic>=0.40", "openai>=1.40"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.10", "build", "twine"]

[project.scripts]
pyscaler = "pyscaler.cli:app"

[project.urls]
Homepage = "https://github.com/jackylk/pyscaler"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/pyscaler"]
